--- a/package.json
+++ b/package.json
@@ -12,24 +12,34 @@
   "dependencies": {
     "@libsql/client": "^0.15.11",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/postcss": "^4.1.12",
+    "@tanstack/react-query": "^5.85.3",
+    "@trpc/client": "^11.4.4",
+    "@trpc/server": "^11.4.4",
+    "@trpc/tanstack-react-query": "^11.4.4",
     "bun-plugin-tailwind": "^0.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.44.4",
     "lucide-react": "^0.539.0",
+    "multicast-dns": "^7.2.5",
+    "open": "^10.2.0",
     "prettier-plugin-organize-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.6",
+    "trpc-bun-adapter": "^1.3.0",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/bun": "^1.2.20",
+    "@types/cors": "^2.8.19",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "drizzle-kit": "^0.31.4",
