--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "generate-routes": "tsr generate",
     "watch-routes": "tsr watch",
-    "db:push": "npx drizzle-kit push",
+    "db:push": "bun drizzle-kit push",
+    "db:studio": "bun drizzle-kit studio",
     "dev": "bun run watch-routes & bun --hot src/index.tsx",
     "build": "bun run generate-routes && bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"' --env='BUN_PUBLIC_*'",
     "start": "NODE_ENV=production bun src/index.tsx"
@@ -29,6 +30,7 @@
     "drizzle-orm": "^0.44.4",
     "lucide-react": "^0.539.0",
     "multicast-dns": "^7.2.5",
+    "music-metadata": "^11.8.3",
     "open": "^10.2.0",
     "prettier-plugin-organize-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
@@ -38,7 +40,8 @@
     "tailwindcss": "^4.1.12",
     "trpc-bun-adapter": "^1.3.0",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
