--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
@@ -28,7 +31,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.44.4",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.542.0",
     "multicast-dns": "^7.2.5",
     "music-metadata": "^11.8.3",
     "open": "^10.2.0",
