--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "dev": "^0.1.3",
     "drizzle-orm": "^0.44.4",
     "lucide-react": "^0.542.0",
     "multicast-dns": "^7.2.5",
     "music-metadata": "^11.8.3",
+    "node-watch": "^0.7.4",
     "open": "^10.2.0",
     "prettier-plugin-organize-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
