--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-router-devtools": "^1.131.27",
     "@tanstack/react-store": "^0.7.4",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "@trpc/client": "^11.4.4",
     "@trpc/server": "^11.4.4",
     "@trpc/tanstack-react-query": "^11.4.4",
