--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-query-devtools": "^5.85.6",
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/react-router-devtools": "^1.131.27",
     "@tanstack/react-store": "^0.7.4",
