tailwind css with postcss instead of weird big file, playlist managment, creating, editing, deleteing

--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "db:studio": "bun drizzle-kit studio",
     "dev": "bun run watch-routes & bun --hot src/index.tsx",
     "build": "bun run generate-routes && bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"' --env='BUN_PUBLIC_*'",
-    "start": "NODE_ENV=production bun src/index.tsx"
+    "start": "NODE_ENV=production bun src/index.tsx",
+    "compile": "bun build --compile --minify --sourcemap --bytecode src/index.tsx --outfile myapp"
   },
   "dependencies": {
     "@libsql/client": "^0.15.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/postcss": "^4.1.12",
+    "@tanstack/react-form": "^1.19.3",
     "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-query-devtools": "^5.85.6",
     "@tanstack/react-router": "^1.131.27",
@@ -41,6 +45,7 @@
     "music-metadata": "^11.8.3",
     "node-watch": "^0.7.4",
     "open": "^10.2.0",
+    "postcss": "^8.5.6",
     "prettier-plugin-organize-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "^19.1.1",
