--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.542.0",
     "multicast-dns": "^7.2.5",
     "music-metadata": "^11.8.3",
+    "next-themes": "^0.4.6",
     "node-watch": "^0.7.4",
     "open": "^10.2.0",
     "postcss": "^8.5.6",
@@ -51,6 +52,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "trpc-bun-adapter": "^1.3.0",
